# oracleforge

./: .gitignore  README.md  oracleforge.example.yaml  plan0803.md  pyproject.toml
.github/workflows/: fitness_functions.yml
application/use_cases/: cdc_pipeline.py  migration_pipeline.py
domain/: exceptions.py
domain/entities/: ap.py  cdc.py  data_quality.py  gl.py  hcm.py  plsql_objects.py  reconciliation.py  schema_metadata.py
domain/events/: migration_events.py
domain/ports/: ai_ports.py  alloydb_ports.py  cdc_ports.py  code_generator_ports.py  compliance_ports.py  event_ports.py  gcp_ports.py  oracle_ports.py  orchestration_ports.py  reconciliation_ports.py  report_ports.py  secret_ports.py
domain/services/: ap_service.py  cdc_service.py  code_generator_service.py  data_quality_service.py  entity_service.py  gl_service.py  lineage_service.py  org_service.py  plsql_translator_service.py  reconciliation_service.py
domain/value_objects/: common.py
infrastructure/: logging.py  resilience.py
infrastructure/adapters/: alloydb_adapter.py  dbt_generator_adapter.py  gcp_adapters.py  logging_event_bus.py  mock_cdc_adapter.py  mock_gcp_adapter.py  mock_oracle_adapter.py  mock_reconciliation_adapter.py  oracle_adapter.py  pdpl_adapter.py  reconciliation_adapter.py  report_adapter.py  secret_adapter.py  vertex_ai_adapter.py
infrastructure/config/: bootstrap.py  dependency_injection.py  settings.py
presentation/: cli.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: integration_test.py
tests/domain/: test_ap.py  (+8 more)
(+27 files in other folders)
